Fix for part 1 of Bug 691635, supplied by Norbert Janssen. Many thanks.

In the recent work to remove global variables where possible, I had failed to
change an instance of iodev_default to be iodev_default(mem).

No expected changes.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11754 a1074d23-0009-0410-80fe-cf8c14f379e6